--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -30,8 +30,6 @@
 <div class="grid p-fluid mb-2">
     <!--PROFILO AZIENDALE-->
     <div class="col-12 md:col-6">
-
-
         <div class="card" style="border-radius: 0px;">
             <div class="grid p-fluid mb-2">
                 <div class="col-6">
@@ -179,8 +177,8 @@
                         <div class="flex flex-column align-content-center justify-content-center mt-3">
                             <div class="flex align-content-center justify-content-center">
                                 <button (click)="display=true" pButton pRipple type="button"
-                                    class="p-button bg-primary p-component p-button-text text-white"><i
-                                        class="pi pi-plus"></i>{{ 'global.add' | translate }}</button>
+                                    class="p-button bg-primary p-component p-button-text text-white text-center align-items-center "><i
+                                        class="pi pi-qrcode mr-2"></i>{{ 'global.add' | translate }}</button>
                             </div>
                         </div>
                     </div>
@@ -335,12 +333,13 @@
                 <div class="col-12 text-center">
                     <label>{{ 'pages.brand.form.image.label' | translate }} </label>
                 </div>
-                <div class="col-12 mt-0">
+                <div class="col-12 mt-0 flex flex-wrap justify-content-center text-center">
                     <img *ngIf="!form.get('image').value" src="assets/icona-immagine.jpg"
                         style="width:150px;height:auto">
                     <img *ngIf="form.get('image').value" src="//{{form.get('image').value}}"
-                        style="width:150px;height:auto">
+                        style="width:150px;height:auto;padding:1rem;border: 2px;border-style: solid;border-color:black">
                 </div>
+
                 <div class="col-12">
                     <p-fileUpload mode="basic" name="image" chooseIcon="pi pi-upload"
                         url="https://app.eulabel.it/backend/brand-image/{{form.get('id').value}}" accept="image/*"
