--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -29,7 +29,7 @@
 <!--ELABEL FORM-->
 <div class="grid p-fluid mb-2">
     <!--PROFILO AZIENDALE-->
-    <div class="col-12 md:col-9">
+    <div class="col-12 lg:col-8 xl:col-9">
 
 
         <div class="card pb-0" style="border-radius: 0px;">
@@ -563,7 +563,7 @@
     </div>
 
 
-    <div class="col-12 md:col-3" >
+    <div class="col-12 lg:col-4 xl:col-3" >
         <app-preview 
         [materials]="materials" 
         [containers]="containers" 
