--- a/src/app/demo/components/preview/preview.component.html
+++ b/src/app/demo/components/preview/preview.component.html
@@ -39,7 +39,7 @@
                     <!--BANDA COLORATA-->
 
                     <div class="col-12 pt-3"
-                        [ngStyle]="{'background-color':(primary_color!='') ? primary_color : 'black' }">
+                        [ngStyle]="{'background-color':(primary_color!=null) ? primary_color : 'black' }">
 
 
 
@@ -78,7 +78,7 @@
                         <div class="grid">
                             <div class="col-12">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.ingredients.title' |
                                     translate }}</p>
                                 <ng-container *ngIf="form.get('ingredients').value" class="m0 p0">
@@ -102,7 +102,7 @@
                         <div class="grid text-center">
                             <div class="col-12 mt-0 py-0 mb-2">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.nutritions.title' | translate }}</p>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                             <table style="width: 100%;" border="1" class="info">
                                 <tbody>
                                     <tr style="border-bottom:1px;border-style: dotted;"
-                                        [ngStyle]="{'border-color:':(primary_color!='') ? primary_color : 'black' }">
+                                        [ngStyle]="{'border-color:':(primary_color!=null) ? primary_color : 'black' }">
                                         <td class="pl-1">Valori medi</td>
                                         <td class="text-right pr-1">per 100ml</td>
                                         <td *ngIf="show_portion" class="text-right pr-1">per porzione <span
@@ -175,7 +175,7 @@
                         <div class="grid">
                             <div class="col-12 flex-column flex">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.recycling.title_preview' |
                                     translate }}</p>
                                 <div>
@@ -212,7 +212,7 @@
                         <div class="grid">
                             <div class="col-12 mb-0">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.recycling.sub.title' |
                                     translate }}</p>
                             </div>
@@ -244,7 +244,7 @@
                         <div class="grid">
                             <div class="col-12 mb-0">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.sustainability.title' |
                                     translate }}</p>
                             </div>
@@ -271,7 +271,7 @@
                         <div class="grid">
                             <div class="col-12 mb-0">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.info_prodotto.title' |
                                     translate }}</p>
                             </div>
@@ -316,7 +316,7 @@
                         <div class="grid">
                             <div class="col-12 mb-0">
                                 <p class="titolo mb-2"
-                                    [ngStyle]="{'color':(primary_color!='') ? primary_color : 'black' }">{{
+                                    [ngStyle]="{'color':(primary_color!=null) ? primary_color : 'black' }">{{
                                     'pages.info_produttore.title' |
                                     translate }}</p>
                             </div>
