--- a/src/app/demo/components/preview/preview.component.html
+++ b/src/app/demo/components/preview/preview.component.html
@@ -82,6 +82,7 @@
                                     'pages.ingredients.title' |
                                     translate }}</p>
                                 <ng-container *ngIf="form.get('ingredients').value" class="m0 p0">
+                                    {{form.get('ingredients').value | json}}
                                     <p class="info mb-0" *ngFor="let ingredient of form.get('ingredients').value">
                                         {{ingredient.label | translate}}
                                     </p>
