--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -140,8 +140,57 @@
                 <p-tabPanel header="{{ 'pages.dashboard.cards.label' | translate }}" class="line-height-3 px-0 mx-0 mb-3">
 
 
-                    <div class="grid flex">
-                        <div class="col-12 my-0 py-0" *ngFor="let label of labels">
+
+
+                        <div class="card  pt-1 pb-0 px-2 my-1" *ngFor="let label of labels">
+    
+                            <div class="grid flex flex-row">
+                                <div
+                                    class="col-6 flex justify-content-start align-content-center align-items-center">
+                                    <img *ngIf="!label.sub_image" alt="Product image preview"
+                                        src="assets/placeholder_bottle.webp" width="auto" height="50" decoding="async"
+                                        loading="lazy" class="p-2" style="color: transparent;max-height:50px"
+                                        class="hidden md:flex">
+                                    <img *ngIf="label.sub_image" alt="Product image preview"
+                                        src="https://{{label.sub_image}}" width="auto" height="50" decoding="async"
+                                        loading="lazy" class="p-2" style="color: transparent;max-height:50px"
+                                        class="hidden md:flex">
+                                    <a [routerLink]="['/elabel/' + label.id]"
+                                        class="truncate font-semibold xl:text-base" href="javascript:void(0)"
+                                        class="truncate ml-2">{{label.product_name}}</a><span *ngIf="label.sku!=''"
+                                        class="truncate">-
+                                        {{label.sku}}</span>
+                                    <div class="ml-1 hidden md:block">
+                                        <span *ngIf="label.status==''"><p-tag severity="warning"
+                                                value="Bozza"></p-tag></span>
+                                        <span *ngIf="label.status!=''"><p-tag severity="success"
+                                                value="Pubblicato"></p-tag></span>
+                                    </div>
+                                </div>
+                                <div
+                                    class="col-6 flex justify-content-end align-content-center align-items-center">
+                                    <p-menu #menu [model]="items_elabel" [popup]="true" />
+                                    <p-button (onClick)="menu.toggle($event)" icon="pi pi-ellipsis-v"
+                                        styleClass="p-button-sm p-button-outlined p-button-secondary"
+                                        class="flex md:hidden" />
+
+                                    <p-button icon="pi pi-pencil" pTooltip="Modifica"
+                                        styleClass="p-button-sm p-button-outlined p-button-secondary"
+                                        [routerLink]="['/elabel/' + label.id]" class="hidden md:flex"></p-button>
+                                    <p-button icon="pi pi-qrcode" pTooltip="QrCode"
+                                        styleClass="p-button-sm p-button-outlined p-button-secondary"
+                                        [routerLink]="['/elabel/' + label.id]" class="hidden md:flex m-2"></p-button>
+                                    <p-button icon="pi pi-copy" pTooltip="Duplica"
+                                        styleClass="p-button-sm p-button-outlined p-button-secondary"
+                                        [routerLink]="['/elabel/' + label.id]" class="hidden md:flex"></p-button>
+                                </div>
+
+                            </div>
+                        
+                    </div>
+                    <!-- <div class="grid flex">
+
+                        <div class="col-12"  style="border-color: rgb(203, 213, 225);" *ngFor="let label of labels">
                             <div class="grid flex my-0 py-0">
                                 <div
                                     class="col-6 flex justify-content-start align-content-center align-items-center my-0 py-0">
@@ -155,7 +204,7 @@
                                         class="hidden md:flex">
                                     <a [routerLink]="['/elabel/' + label.id]"
                                         class="truncate font-semibold xl:text-base" href="javascript:void(0)"
-                                        class="truncate">{{label.product_name}}</a><span *ngIf="label.sku!=''"
+                                        class="truncate ml-2">{{label.product_name}}</a><span *ngIf="label.sku!=''"
                                         class="truncate">-
                                         {{label.sku}}</span>
                                     <div class="ml-1 hidden md:block">
@@ -184,10 +233,9 @@
                                 </div>
 
                             </div>
-                            <p-divider></p-divider>
                         </div>
 
-                    </div>
+                    </div> -->
 
 
                     <div class="container ng-star-inserted flex align-content-center justify-content-center mt-3"
@@ -315,6 +363,7 @@
         <div class="flex flex-column">
             <div class="flex flex-column col-12 p-0">
                 <div *ngIf="false">
+                
                     <label for="name" class="block text-900 text-xl font-medium mb-2">{{ 'pages.elabel.form.id' |
                         translate }}</label>
                     <input type="text" pInputText [formControl]="id" required autofocus />
