--- a/src/app/demo/components/auth/register/register.component.html
+++ b/src/app/demo/components/auth/register/register.component.html
@@ -1,7 +1,56 @@
 <p-toast key="tst"></p-toast>
 
+<div *ngIf="url=='/register'"
+    class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
 
-<div class="grid">
+    <div class="progress-spinner" *ngIf="loading">
+        <p-progressSpinner styleClass="w-4rem h-4rem" strokeWidth="8" fill="var(--surface-ground)"
+            animationDuration=".5s"></p-progressSpinner>
+    </div>
+    <div class="flex flex-column align-items-center justify-content-center">
+        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
+            alt="Eulabel logo" class="mb-5 w-20rem flex-shrink-0">
+        <h1>Registrati</h1>
+        <div
+            style=" padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
+            <div class="w-full surface-card py-8 px-5 sm:px-8">
+                <div>
+                    <label for="company_name" class="block text-900 text-xl font-medium mb-2">Azienda</label>
+                    <input [formControl]="form.get('company_name')" id="company_name" type="text" placeholder="Azienda"
+                        pInputText class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <label for="name" class="block text-900 text-xl font-medium mb-2">Nome</label>
+                    <input [formControl]="form.get('name')" id="name" type="text" placeholder="Nome" pInputText
+                        class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <label for="surname" class="block text-900 text-xl font-medium mb-2">Cognome</label>
+                    <input [formControl]="form.get('surname')" id="surname" type="text" placeholder="Cognome" pInputText
+                        class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <label for="email" class="block text-900 text-xl font-medium mb-2">Email</label>
+                    <input [formControl]="form.get('email')" id="email" type="text" placeholder="Email" pInputText
+                        class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <label for="phone" class="block text-900 text-xl font-medium mb-2">Telefono</label>
+                    <input [formControl]="form.get('phone')" id="phone" type="text" placeholder="Telefono" pInputText
+                        class="w-full md:w-30rem mb-5" style="padding:1rem">
+                    <label for="username" class="block text-900 text-xl font-medium mb-2">Username</label>
+                    <input [formControl]="form.get('username')" id="username" type="text"
+                        placeholder="Choose your username" pInputText class="w-full md:w-30rem mb-5"
+                        style="padding:1rem">
+
+                    <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
+                    <p-password [formControl]="form.get('password')" id="password1" placeholder="Password"
+                        [toggleMask]="false" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
+                </div>
+
+                <button pButton pRipple label="Sign in" (click)="save()" class="w-full p-3 text-xl"></button>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="grid" *ngIf="url!='/register'">
     <div class="col-12 md:col-3">
         <!--  <div class="flex flex-column mb-5 gap-5" *ngIf="edit">
             <div class="flex align-items-center">
@@ -31,8 +80,7 @@
         <div class="grid">
             <div class="col-6">
                 <label for="name">{{ 'pages.register.name' | translate}}</label>
-                <input [formControl]="form.get('name')" type="text" placeholder="Name" pInputText
-                    style="padding:1rem">
+                <input [formControl]="form.get('name')" type="text" placeholder="Name" pInputText style="padding:1rem">
             </div>
             <div class="col-6">
                 <label for="surname">{{ 'pages.register.surname' | translate}}</label>
@@ -101,12 +149,12 @@
                 <label for="piva">{{ 'pages.register.piva' | translate}}</label>
                 <input [formControl]="form.get('piva')" type="text" placeholder="11359591002" pInputText
                     style="padding:1rem">
-            
-                
+
+
             </div>
             <div class="col-12 md:col-6">
-                <label for="sdi" >{{ 'pages.register.sdi' | translate}}</label>
-                <input [formControl]="form.get('sdi')" type="text" placeholder="0000000" pInputText 
+                <label for="sdi">{{ 'pages.register.sdi' | translate}}</label>
+                <input [formControl]="form.get('sdi')" type="text" placeholder="0000000" pInputText
                     style="padding:1rem">
             </div>
         </div>
@@ -124,15 +172,15 @@
             <div class="col-12 md:col-6">
                 <label for="password">{{ 'pages.register.password' |
                     translate}}</label>
-                    <p-password [formControl]="form.get('password')" [toggleMask]="true" />
-              <!--   <input [formControl]="form.get('password')" type="password" placeholder="******" pInputText
+                <p-password [formControl]="form.get('password')" [toggleMask]="true" />
+                <!--   <input [formControl]="form.get('password')" type="password" placeholder="******" pInputText
                      style="padding:1rem"> -->
             </div>
         </div>
 
     </div>
-    
+
     <div class="col-12 flex justify-content-end gap-3">
         <p-button label="{{ 'pages.register.save' | translate}}" (click)="save()" />
-</div>
+    </div>
 </div>
