--- a/src/app/demo/components/elabel/elabel.component.html
+++ b/src/app/demo/components/elabel/elabel.component.html
@@ -37,11 +37,10 @@
             <p-tabView orientation="left">
                 <!--FORM-->
                 <p-tabPanel header="{{ 'pages.elabel.cards.tab1' | translate }}" class="line-height-3 m-0">
-                    <div style="height: calc(100vh - 29rem);;overflow: auto;">
+                  <!--   <div style="height: calc(100vh - 29rem);;overflow: auto;"> -->
                         <div class="grid">
                             <div class="col-12 md:col-9">
-                                {{form.get('user_id').value}}
-                            <input pInputText id="user_id" [formControl]="form.get('user_id')" />
+<!--                             <input pInputText id="user_id" [formControl]="form.get('user_id')" /> -->
                         </div>
                             <div class="col-12 md:col-9">
                                 <p class="mt-3">Compila tutte le informazioni che devono essere visualizzate sulla
@@ -74,9 +73,9 @@
                                                 [label]="'pages.elabel.form.country.helper'"></app-infobutton>
                                             🇪🇺</label>
                                       <!--   <input pInputText id="country" [formControl]="form.get('country')" /> -->
-                                         {{form.get('country').value | json}}
+
                                         <p-dropdown [options]="states" [formControl]="form.get('country')"
-                                        [showClear]="true" placeholder="Seleziona">
+                                        [showClear]="true" [filter]="true" filterBy="nome_stati" placeholder="Seleziona">
                                         <ng-template let-option pTemplate="selectedItem">
                                             <span>{{option.nome_stati | translate}}</span>
                                         </ng-template>
@@ -212,7 +211,7 @@
 
                             </div>
                             <div class="col-12">
-                                <p-dropdown [options]="ingredients" (onChange)="onChangeIngredient($event)"
+                                <p-dropdown [options]="ingredients" [filter]="true" filterBy="label" (onChange)="onChangeIngredient($event)"
                                     [group]="true" [showClear]="true"  placeholder="Seleziona">
                                     <ng-template let-option pTemplate="selectedItem">
                                         <span>{{option.label | translate}}</span>
@@ -555,7 +554,7 @@
                             </div>
 
                         </div>
-                    </div>
+                   <!--  </div> -->
                 </p-tabPanel>
 
                 <!--IMPOSTAZIONI-->
@@ -585,7 +584,6 @@
     </div>
 
 
-    <div class="col-12 lg:col-4 xl:col-3" >
         <app-preview 
         [materials]="materials" 
         [containers]="containers" 
@@ -595,6 +593,22 @@
         [geoGraphicalIndication]="geographical_indication"
         [preview_image]="preview_image" 
         [sub_image]="sub_image" 
-        [form]="form"></app-preview>
-    </div>
+        [form]="form" class="col-12 lg:col-4 xl:col-3 hidden lg:block"></app-preview>
+
+</div>
+
+<p-sidebar [(visible)]="sidebarVisible" [fullScreen]="true">
+    <app-preview 
+    [materials]="materials" 
+    [containers]="containers" 
+    [packages]="packages" 
+    [ingredients]="ingredients" 
+    [types]="types" 
+    [geoGraphicalIndication]="geographical_indication"
+    [preview_image]="preview_image" 
+    [sub_image]="sub_image" 
+    [form]="form" class="col-12 lg:col-4 xl:col-3 block lg:hidden"></app-preview>
+</p-sidebar>
+<div class="fixed bottom-2 right-2 block lg:hidden">
+<p-button (onClick)="sidebarVisible = true" icon="pi pi-eye" pTooltip="Live preview" />
 </div>
